rejigging settings styles

--- a/src/ui/views/controls.less
+++ b/src/ui/views/controls.less
@@ -3,6 +3,7 @@
 .controls {
     display: flex;
     background: #fff;
+    height: 30px;
     border-bottom: 1px solid #b4b4b4;
     > .fill {
         flex: 1;
