bottom after all

--- a/src/ui/views/applayout.less
+++ b/src/ui/views/applayout.less
@@ -32,13 +32,13 @@
         display: flex;
         flex-direction: column;
         width: 200px;
-        > .topleft {
-            flex: none;
-        }
         > .list {
             flex: 1;
             overflow-x: hidden;
             overflow-y: auto;
+        }
+        > .lfoot {
+            flex: none;
         }
     }
     > .right {
