--- a/src/ui/views/controls.less
+++ b/src/ui/views/controls.less
@@ -3,19 +3,20 @@
 .controls {
     display: flex;
     background: #fff;
-    height: 30px;
-    border-bottom: 1px solid #b4b4b4;
+    height: 31px;
+    border-top: 1px solid #b4b4b4;
     > .fill {
         flex: 1;
     }
     > .button {
         flex: none;
         width: 30px;
-        height: 30px;
-        line-height: 30px;
+        height: 31px;
+        line-height: 28px;
         border-right: 1px solid #b4b4b4;
         text-align: center;
         cursor: pointer;
+        align-content: center;
         &:last-child {
             border-right: none;
             border-left: 1px solid #b4b4b4;
