--- a/src/ui/css/global.less
+++ b/src/ui/css/global.less
@@ -28,6 +28,14 @@ body {
     line-height: 20px;
 }
 
+h1 {
+    font-weight: 100;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    margin-top: 8px;
+    margin-bottom: 1em;
+}
+
 @brand-primary:         #1269b0; // dark blue
 @brand-success:         #5cb85c; // green
 @brand-warning:         #c94646; // red
