--- a/src/ui/views/convadd.less
+++ b/src/ui/views/convadd.less
@@ -1,15 +1,5 @@
 .convadd {
   padding: 20px;
-  h1 {
-    font-family: Helvetica Neue;
-    font-size: xx-large;
-    margin-bottom: 20px;
-  }
-  hr {
-    border-bottom: 1px solid #dedede;
-    margin-bottom: 20px;
-  }
-
   .input {
       display: flex;
       justify-content: center;
@@ -19,8 +9,8 @@
           padding: 0;
           input {
               width: 100%;
-              resize: vertical;
-              padding: 3px;
+              resize: none;
+              padding: 3px 7px;
               font-size: 14px;
               line-height: 22px;
               outline: none;
@@ -32,38 +22,58 @@
 
   button {
     padding: 10px;
-    font-size: 18px;
-    border-radius: 6px
+    font-size: 16px;
+    font-family: inherit;
+    font-weight: 300;
+    width: 150px;
+    padding: 8px;
+    border: 1px solid #b4b4b4;
+    background: #fff;
+    &:enabled {
+        cursor: pointer;
+        &:hover {
+            background: #b4b4b4;
+        }
+    }
   }
 
   ul {
-    display: block;
-    overflow: hidden;
-    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px -4px 20px -4px;
     li.selected {
-      background-color: lightblue;
-      border-radius: 9px;
+      background-color: #adf;
     }
     li {
       text-align: center;
       padding: 10px;
-      width: 100px;
-      max-height: 134px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      display: -webkit-box;
-      display: block;
-      float: left;
-      border: 3px solid white;
+      cursor: pointer;
+      width: 85px;
+      height: 120px;
+      margin: 4px;
+      border-radius: 5px;
+      background: #f0f0f0;
+      &:hover {
+          background: #b4b4b4;
+      }
+      display: flex;
+      flex-flow: column;
+      align-items: center;
+      justify-content: space-between;
       > img {
-        max-width: 70px;
-        max-height: 70px;
-        border-radius: 9px;
+        max-width: 56px;
+        max-height: 56px;
+        background-size: cover;
+        border-radius: 50%;
+        flex: none;
+      }
+      > p {
+          overflow: hidden;
+          text-overflow: ellipsis;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
       }
     }
   }
-  
-}
 
+}
