--- a/src/ui/views/convadd.less
+++ b/src/ui/views/convadd.less
@@ -14,8 +14,7 @@
               font-size: 14px;
               line-height: 22px;
               outline: none;
-              border: 1px solid #dedede;
-              border-radius: 3px;
+              border: 1px solid #b4b4b4;
           }
       }
   }
