--- a/src/ui/css/global.less
+++ b/src/ui/css/global.less
@@ -36,6 +36,11 @@ h1 {
     margin-bottom: 1em;
 }
 
+::-webkit-input-placeholder {
+    color: #ddd;
+}
+
+
 @brand-primary:         #1269b0; // dark blue
 @brand-success:         #5cb85c; // green
 @brand-warning:         #c94646; // red
