--- a/src/ui/views/convadd.less
+++ b/src/ui/views/convadd.less
@@ -26,13 +26,9 @@
     font-weight: 300;
     width: 150px;
     padding: 8px;
-    border: 1px solid #b4b4b4;
-    background: #fff;
+    background: #e9e9e9;
     &:enabled {
         cursor: pointer;
-        &:hover {
-            background: #b4b4b4;
-        }
     }
   }
 
@@ -50,6 +46,7 @@
       width: 85px;
       height: 120px;
       margin: 4px;
+      overflow: hidden;
       border-radius: 5px;
       background: #f0f0f0;
       &:hover {
