convadd: add name

--- a/src/ui/views/convadd.less
+++ b/src/ui/views/convadd.less
@@ -15,6 +15,7 @@
               line-height: 22px;
               outline: none;
               border: 1px solid #b4b4b4;
+              margin-bottom: 1em;
           }
       }
   }
