--- a/src/ui/views/applayout.less
+++ b/src/ui/views/applayout.less
@@ -24,8 +24,10 @@
         z-index: 1;
         flex: none;
         cursor: ew-resize;
+        -webkit-user-select: none;
     }
     > .left {
+        -webkit-user-select: none;
         background: #f0f0f0;
         border-right: 1px solid #b4b4b4;
         flex: none;
