pure hangout filtering

--- a/src/ui/views/convlist.less
+++ b/src/ui/views/convlist.less
@@ -16,6 +16,10 @@
         &.unread {
             font-weight: 500;
         }
+        &.purehang {
+            color: #999;
+            font-style: italic;
+        }
         .convname {
             flex: 1;
             text-overflow: ellipsis;
