style tweaks to convlist

--- a/src/ui/views/convlist.less
+++ b/src/ui/views/convlist.less
@@ -6,6 +6,16 @@
         line-height: 25px;
         cursor: pointer;
         display: flex;
+        align-items: center;
+        &:after {
+            content:"";
+            position: absolute;
+            bottom:0;
+            left: 15px;
+            width: 100%;
+            height: 1px;
+            background: #e1e1e1;
+        }
         &:hover {
             background: #bbb;
         }
@@ -34,21 +44,23 @@
         .thumbs {
             margin: 0px;
             display: inline-block;
-            margin-left: -7px;
-            margin-right: 7px;
+            margin-right: 10px;
             overflow: hidden;
             height: @square;
             width: @square;
             position: relative;
+
+            img {
+                border-radius: 50%;
+                z-index: 2;
+                position: absolute;
+            }
 
             /* one image */
             @size-one: 50px;
             img:nth-child(1):nth-last-child(1) {
                 width: @size-one;
                 height: @size-one;
-                border-radius: 50%;
-                z-index: 2;
-                position: absolute;
             }
 
             /* two images */
@@ -56,16 +68,12 @@
             img:nth-child(1):nth-last-child(2) {
                 width: @size-two;
                 height: @size-two;
-                border-radius: 50%;
-                position: absolute;
                 top: 0px;
                 left: 0px;
             }
             img:nth-child(2):nth-last-child(1) {
                 width: @size-two;
                 height: @size-two;
-                border-radius: 50%;
-                position: absolute;
                 bottom: 0px;
                 right: 0px;
             }
@@ -75,24 +83,18 @@
             img:nth-child(1):nth-last-child(3) {
                 width: @size-three;
                 height: @size-three;
-                border-radius: 50%;
-                position: absolute;
                 top: 0;
                 left: (@square - @size-three) / 2;
             }
             img:nth-child(2):nth-last-child(2) {
                 width: @size-three;
                 height: @size-three;
-                border-radius: 50%;
-                position: absolute;
                 bottom: 0;
                 left: 0;
             }
             img:nth-child(3):nth-last-child(1){
                 width: @size-three;
                 height: @size-three;
-                border-radius: 50%;
-                position: absolute;
                 bottom: 0;
                 left: @square - @size-three;
             }
@@ -102,32 +104,24 @@
             img:nth-child(1):nth-last-child(4) {
                 width: @size-four;
                 height: @size-four;
-                border-radius: 50%;
-                position: absolute;
                 top: 0px;
                 left: 0px;
             }
             img:nth-child(2):nth-last-child(3) {
                 width: @size-four;
                 height: @size-four;
-                border-radius: 50%;
-                position: absolute;
                 top: 0px;
                 right: 0px;
             }
             img:nth-child(3):nth-last-child(2) {
                 width: @size-four;
                 height: @size-four;
-                border-radius: 50%;
-                position: absolute;
                 bottom: 0px;
                 left: 0px;
             }
             img:nth-child(4):nth-last-child(1) {
                 width: @size-four;
                 height: @size-four;
-                border-radius: 50%;
-                position: absolute;
                 bottom: 0px;
                 right: 0px;
             }
