--- a/src/ui/views/convlist.less
+++ b/src/ui/views/convlist.less
@@ -7,10 +7,9 @@
         cursor: pointer;
         display: flex;
         align-items: center;
-        &:after {
-            content:"";
+        .divider {
             position: absolute;
-            bottom:0;
+            bottom:-1px;
             left: 15px;
             width: 100%;
             height: 1px;
@@ -18,10 +17,16 @@
         }
         &:hover {
             background: #bbb;
+            .divider {
+                display: none;
+            }
         }
         &.selected {
             background: #adf;
             cursor: auto;
+            .divider {
+                display: none;
+            }
         }
         &.unread {
             font-weight: 500;
