--- a/src/ui/views/convlist.less
+++ b/src/ui/views/convlist.less
@@ -16,7 +16,7 @@
             background: #e1e1e1;
         }
         &:hover {
-            background: #bbb;
+            background: darken(#f0f0f0, 15%);
             .divider {
                 display: none;
             }
