fix styling in case of 2 avatars

--- a/src/ui/views/convlist.less
+++ b/src/ui/views/convlist.less
@@ -78,7 +78,7 @@
                 width: @size-two;
                 height: @size-two;
                 bottom: 0px;
-                right: 0px;
+                left: @square / 2;
             }
 
             /* three images */
