--- a/src/ui/views/convlist.less
+++ b/src/ui/views/convlist.less
@@ -82,7 +82,7 @@
                 height: @size-two;
                 top: 9px;
                 left: 9px;
-                border: 1px solid white;
+                border: 1px solid #e1e1e1;
             }
 
             /* three images */
