use notr for notifications

--- a/src/ui/css/global.less
+++ b/src/ui/css/global.less
@@ -62,3 +62,13 @@ h1 {
 .brand-info {
     color: @brand-info;
 }
+
+body .notr {
+    box-shadow: none;
+    min-width: 1px;
+    min-height: 1px;
+    padding: 5px 10px;
+}
+body .notrstack {
+    min-width: 1px;
+}
