styling of notifications

--- a/src/ui/css/global.less
+++ b/src/ui/css/global.less
@@ -63,11 +63,20 @@ h1 {
     color: @brand-info;
 }
 
+a {
+    color: #3879d9;
+    text-decoration: none;
+}
+
 body .notr {
-    box-shadow: none;
+    box-shadow: 0 0 2px rgba(0,0,0,0.4);
     min-width: 1px;
     min-height: 1px;
-    padding: 5px 10px;
+    padding: 9px 14px;
+    border-radius: 5px;
+    border: none;
+    color: #666;
+    font-size: 0.9em;
 }
 body .notrstack {
     min-width: 1px;
