--- a/src/ui/views/messages.less
+++ b/src/ui/views/messages.less
@@ -1,6 +1,9 @@
 
 .messages {
     padding: 15px;
+    .historyinfo {
+        height: 60px;
+    }
     .tgroup {
         .timestamp {
             margin-top: 15px;
