nicer uploading image

--- a/src/ui/views/messages.less
+++ b/src/ui/views/messages.less
@@ -42,10 +42,7 @@
                     padding-bottom: 5px;
                     white-space: pre-wrap;
                     &.placeholder {
-                        color: #aaa;
-                        a {
-                            color: #aaa;
-                        }
+                        opacity: 0.5;
                     }
                     .attach {
                         margin-top: 4px;
