message for rename/membership_change

--- a/src/ui/views/messages.less
+++ b/src/ui/views/messages.less
@@ -52,6 +52,12 @@
                         max-width: 100%;
                         border-radius: 8px;
                     }
+                    &.conversation_rename,
+                    &.membership_change {
+                        font-style: italic;
+                        color: #999;
+                        font-size: 0.9em;
+                    }
                 }
             }
             &.self {
