--- a/src/ui/views/applayout.less
+++ b/src/ui/views/applayout.less
@@ -52,6 +52,9 @@
             overflow-x: hidden;
             overflow-y: auto;
         }
+        > .maininfo {
+            flex: none;
+        }
         > .foot {
             flex: none;
             background: #f6f6f6;
