typing STOP bug fix and some styling

--- a/src/ui/views/convlist.less
+++ b/src/ui/views/convlist.less
@@ -35,6 +35,12 @@
             color: #999;
             font-style: italic;
         }
+        .convtyping {
+            position: absolute;
+            right: 5px;
+            top: 10px;
+            color: #999;
+        }
         .convname {
             flex: 1;
             text-overflow: ellipsis;
