--- a/src/ui/views/typinginfo.less
+++ b/src/ui/views/typinginfo.less
@@ -3,8 +3,11 @@
 .typing {
     font-size: 0.7em;
     padding: 5px 5px 5px 18px;
-    transition: color 0.5s;
+    transition: font-weight 0.5s;
+    color: #999;
+    .typing_TYPING {
+        font-weight: 500;
+    }
     .typing_PAUSED, .typing_STOPPED {
-        color: #999;
     }
 }
