--- a/src/ui/views/convlist.less
+++ b/src/ui/views/convlist.less
@@ -35,12 +35,6 @@
             color: #999;
             font-style: italic;
         }
-        .convtyping {
-            position: absolute;
-            right: 5px;
-            top: 10px;
-            color: #999;
-        }
         .convname {
             flex: 1;
             text-overflow: ellipsis;
@@ -50,7 +44,27 @@
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
         }
-
+        .unreadcount {
+            margin-top: 3px;
+            flex: none;
+            font-size: 11px;
+            font-weight: 600;
+            background: #3a3a3a;
+            color: #fff;
+            width: 32px;
+            height: 18px;
+            line-height: 18px;
+            text-align: center;
+            border-radius: 20px;
+            z-index: 2;
+        }
+        .convtyping {
+            flex: none;
+            color: #999;
+            margin-right: -10px;
+            width: 10px;
+            text-align: right;
+        }
         @square: 50px;
         .thumbs {
             height: @square;
@@ -87,20 +101,6 @@
                 left: 9px;
             }
 
-        }
-        .unreadcount {
-            margin-top: 3px;
-            flex: none;
-            font-size: 11px;
-            font-weight: 600;
-            background: #3a3a3a;
-            color: #fff;
-            width: 32px;
-            height: 18px;
-            line-height: 18px;
-            text-align: center;
-            border-radius: 20px;
-            z-index: 2;
         }
     }
     &.showconvthumbs .conv .convname {
