--- a/src/ui/views/typinginfo.less
+++ b/src/ui/views/typinginfo.less
@@ -1,10 +1,12 @@
 
-
 .typing {
+    height: 20px;
+    line-height: 20px;
     font-size: 0.7em;
-    padding: 5px 5px 5px 18px;
+    padding: 0 18px 0 18px;
     transition: font-weight 0.5s;
     color: #999;
+    text-align: center;
     .typing_TYPING {
         font-weight: 500;
     }
