no hover in convlist, dark blue selected

--- a/src/ui/views/convlist.less
+++ b/src/ui/views/convlist.less
@@ -15,14 +15,9 @@
             height: 1px;
             background: #e1e1e1;
         }
-        &:hover {
-            background: darken(#f0f0f0, 15%);
-            .divider {
-                display: none;
-            }
-        }
         &.selected {
-            background: #adf;
+            background: #06427e;
+            color: #fff;
             cursor: auto;
             .divider {
                 display: none;
