--- a/src/ui/views/convlist.less
+++ b/src/ui/views/convlist.less
@@ -16,11 +16,15 @@
             background: #e1e1e1;
         }
         &.selected {
-            background: #06427e;
+            background: #4271de;
             color: #fff;
             cursor: auto;
             .divider {
                 display: none;
+            }
+            .convtyping {
+                color: #fff;
+                opacity: 0.7;
             }
         }
         &.unread {
