--- a/src/ui/css/fontello/css/fontello-codes.css
+++ b/src/ui/css/fontello/css/fontello-codes.css
@@ -18,3 +18,4 @@
 .icon-pencil:before { content: '\e810'; } /* '' */
 .icon-bell:before { content: '\e811'; } /* '' */
 .icon-bell-off-empty:before { content: '\e812'; } /* '' */
+.icon-attach:before { content: '\e813'; } /* '' */
