--- a/src/ui/css/fontello/css/fontello.css
+++ b/src/ui/css/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?77175227');
-  src: url('../font/fontello.eot?77175227#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?77175227') format('woff'),
-       url('../font/fontello.ttf?77175227') format('truetype'),
-       url('../font/fontello.svg?77175227#fontello') format('svg');
+  src: url('../font/fontello.eot?30053526');
+  src: url('../font/fontello.eot?30053526#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?30053526') format('woff'),
+       url('../font/fontello.ttf?30053526') format('truetype'),
+       url('../font/fontello.svg?30053526#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?77175227#fontello') format('svg');
+    src: url('../font/fontello.svg?30053526#fontello') format('svg');
   }
 }
 */
@@ -73,3 +73,4 @@
 .icon-pencil:before { content: '\e810'; } /* '' */
 .icon-bell:before { content: '\e811'; } /* '' */
 .icon-bell-off-empty:before { content: '\e812'; } /* '' */
+.icon-attach:before { content: '\e813'; } /* '' */
