--- a/src/ui/views/input.less
+++ b/src/ui/views/input.less
@@ -30,6 +30,7 @@
             cursor: pointer;
             span {
                 display: inline-block;
+                font-size: 16px;
                 line-height: 24px;
             }
         }
