--- a/src/ui/css/fontello/css/fontello-codes.css
+++ b/src/ui/css/fontello/css/fontello-codes.css
@@ -19,3 +19,5 @@
 .icon-bell:before { content: '\e811'; } /* '' */
 .icon-bell-off-empty:before { content: '\e812'; } /* '' */
 .icon-attach:before { content: '\e813'; } /* '' */
+.icon-star:before { content: '\e814'; } /* '' */
+.icon-star-empty:before { content: '\e815'; } /* '' */
