--- a/src/ui/css/fontello/css/fontello.css
+++ b/src/ui/css/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?30053526');
-  src: url('../font/fontello.eot?30053526#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?30053526') format('woff'),
-       url('../font/fontello.ttf?30053526') format('truetype'),
-       url('../font/fontello.svg?30053526#fontello') format('svg');
+  src: url('../font/fontello.eot?99506615');
+  src: url('../font/fontello.eot?99506615#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?99506615') format('woff'),
+       url('../font/fontello.ttf?99506615') format('truetype'),
+       url('../font/fontello.svg?99506615#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?30053526#fontello') format('svg');
+    src: url('../font/fontello.svg?99506615#fontello') format('svg');
   }
 }
 */
@@ -74,3 +74,5 @@
 .icon-bell:before { content: '\e811'; } /* '' */
 .icon-bell-off-empty:before { content: '\e812'; } /* '' */
 .icon-attach:before { content: '\e813'; } /* '' */
+.icon-star:before { content: '\e814'; } /* '' */
+.icon-star-empty:before { content: '\e815'; } /* '' */
