make starred convs look different

--- a/src/ui/views/convlist.less
+++ b/src/ui/views/convlist.less
@@ -34,6 +34,10 @@
             color: #999;
             font-style: italic;
         }
+        &.starred {
+          border-left: 2px solid #4271de;
+          font-style: italic;
+        }
         .convname {
             flex: 1;
             text-overflow: ellipsis;
