--- a/src/ui/views/convlist.less
+++ b/src/ui/views/convlist.less
@@ -9,8 +9,8 @@
         background-color: #999;
     }
     .starred {
-        .conv {
-            .divider:last-child {
+        .conv:last-child {
+            .divider {
                 display: none;
             }
         }
