--- a/src/ui/views/convlist.less
+++ b/src/ui/views/convlist.less
@@ -1,12 +1,14 @@
 
 .convlist {
     .label {
-        height: 22px;
-        font-size: small;
-        padding: 1px;
-        color: white;
+        font-size: 9px;
+        line-height: 14px;
+        text-transform: uppercase;
+        color: #666;
+        padding-top: 6px;
         padding-left: 7px;
-        background-color: #999;
+        background-color: #e3e3e3;
+        border-bottom: 1px solid #e1e1e1;
     }
     .starred {
         .conv:last-child {
