fix input and textarea font

--- a/src/ui/css/global.less
+++ b/src/ui/css/global.less
@@ -40,6 +40,9 @@ h1 {
     color: #ddd;
 }
 
+input, textarea {
+  font-family: inherit;
+}
 
 @brand-primary:         #1269b0; // dark blue
 @brand-success:         #5cb85c; // green
