Add emoticon-selector and NotoColorEmoji font
This commit introduces a selector for the first code-block
of emoji / emoticons (1F600 trough 1F64F) and also introduces
NotoColorEmoji font, an open font from Google [1].

The new font is used in the selector, message input field and
for the text of send/received messages.

1: https://www.google.com/get/noto/#emoji-qaae-color

--- a/src/ui/css/fontello/css/fontello.css
+++ b/src/ui/css/fontello/css/fontello.css
@@ -74,5 +74,6 @@
 .icon-bell:before { content: '\e811'; } /* '' */
 .icon-bell-off-empty:before { content: '\e812'; } /* '' */
 .icon-attach:before { content: '\e813'; } /* '' */
+.icon-emoji:before { content: '\1f603'; font-family: "Helvetica Neue"} /* '' */
 .icon-star:before { content: '\e814'; } /* '' */
 .icon-star-empty:before { content: '\e815'; } /* '' */
