Change/remove border off icon-drawer

--- a/src/ui/views/input.less
+++ b/src/ui/views/input.less
@@ -6,8 +6,7 @@
         height:138px;
         overflow-y: scroll;
         display: none;
-        border: 1px solid #dedede;
-        border-radius: 3px;
+        border-bottom: 1px solid #dedede;
         width: 100%;
         span {
             display: inline-block;
