Change emoticon size & spacing

--- a/src/ui/views/input.less
+++ b/src/ui/views/input.less
@@ -3,19 +3,20 @@
 .input {
     font-family: 'NotoColorEmoji';
     > div#emoji-selector {
-        height:138px;
+        height:131px;
         overflow-y: scroll;
         display: none;
         border-bottom: 1px solid #dedede;
         width: 100%;
+        padding: 5px 2px 5px 5px;
         span {
             display: inline-block;
             width: 30px;
-            text-align: center;
             height: 30px;
             line-height: 30px;
+            font-size: 20px;
+            text-align: center;
             cursor: pointer;
-            margin: 2px;
         }
     }
 
