--- a/src/ui/views/input.less
+++ b/src/ui/views/input.less
@@ -1,7 +1,7 @@
 @button-container-width: 60px;
 
 .input {
-    font-family: 'NotoColorEmoji';
+    font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif, "NotoColorEmoji";
     > div#emoji-selector {
         height:131px;
         overflow-y: scroll;
