--- a/src/ui/views/messages.less
+++ b/src/ui/views/messages.less
@@ -39,7 +39,7 @@
                 margin-left: 45px;
                 display: table;
                 .message {
-                    font-family: "NotoColorEmoji", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+                    font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif, "NotoColorEmoji";
                     padding-bottom: 5px;
                     white-space: pre-wrap;
                     &.placeholder {
